--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,11 +2,10 @@
     <string name="app_name">AdvancedCleanArchitecture</string>
     <string name="action_settings">Settings</string>
     <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
+    <string name="breeds_fragment_label">Breeds Fragment</string>
 
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="breeds_found_number">We found %d type of breeds</string>
+    <string name="error_no_response">ERROR - Empty body response</string>
+    <string name="error_http_code">ERROR - There was a network issue, httpCode: %d</string>
+    <string name="error_unknown">"ERROR - Unknown error, message:  %s</string>
 </resources>
